--- a/roles/k8s_node/defaults/main.yml
+++ b/roles/k8s_node/defaults/main.yml
@@ -120,7 +120,7 @@ k8s_node__kubelet_image_gc_low_threshold_percent: 80
 k8s_node__kubelet_max_open_files: 1010000
 k8s_node__kubelet_max_pods: 110
 k8s_node__kubelet_node_status_update_frequency: 10s
-k8s_node__kubelet_pod_infra_container_image: k8s.gcr.io/pause-amd64:3.1
+k8s_node__kubelet_pod_infra_container_image: registry.k8s.io/pause:3.6
 k8s_node__kubelet_pod_pids_limit: 512
 k8s_node__kubelet_port: 10250
 k8s_node__kubelet_rotate_certificates: true
