--- a/roles/base/defaults/main.yml
+++ b/roles/base/defaults/main.yml
@@ -1,16 +1,16 @@
 base__hosts_entries:
 - '{{ host__public_address }} {{ ansible_facts.fqdn }}'
 
-base__yum_repos_to_enable: []
-# base__yum_repos_to_enable:
+base__rpm_repos_to_enable: []
+# base__rpm_repos_to_enable:
 # - name: ol7_addons
 #   description: ol7_addons
 #   baseurl: http://yum.oracle.com/repo/OracleLinux/OL7/addons/$basearch/
 #   gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-oracle
 #   gpgcheck: true
 
-base__yum_repos_to_disable: []
-# base__yum_repos_to_disable:
+base__rpm_repos_to_disable: []
+# base__rpm_repos_to_disable:
 # - ol7_software_collections
 
 base__ntp_servers:
@@ -24,3 +24,6 @@ base__selinux:
   state: permissive
 
 base__disable_firewalld: true
+
+base__rpm_pkgs_to_install:
+- unzip
