Use community.general.ini_file instead of ansible.builtin.ini_file.

--- a/roles/dev_env/tasks/tools_installed.yml
+++ b/roles/dev_env/tasks/tools_installed.yml
@@ -55,7 +55,7 @@
     mode: 0755
 
 - name: Git aliases exist
-  ini_file:
+  community.general.ini_file:
     path: /etc/gitconfig
     section: alias
     option: '{{ item.opt }}'
